Tweak permissions, expose fetch, remove browseable API
